--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
+./android/
 # dependencies
 node_modules/
 
@@ -37,3 +38,5 @@ yarn-error.*
 *.tsbuildinfo
 
 app-example
+.idea/
+android/
